<resources>
    <string name="app_name">SpaceFarm</string>
    <string name="soundbutton">Sound Button</string>
    <string name="moneybar">0</string>
    <string name="sell">Sell (1000M$)</string>
    <string name="upgrade">Upgrade (1000M$)</string>
    <string name="autoon">Farm Automatically (1000M$)</string>
    <string name="autooff">Disable Autofarm</string>
    <string name="reset">Reset</string>
    <string name="startover">Start Over</string>
    <string name="options">Options</string>
    <string name="close">Closes the Window</string>
    <string name="minigame">Tap the meteors to collect cash!</string>
    <string name="minigamemenu">Minigame</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="buy">Buy Planet</string>
    <string name="planet1">Planet #1</string>
    <string name="planet2">Planet #2</string>
    <string name="planet3">Planet #3</string>
    <string name="bgvolume">Background Volume</string>
    <string name="background">App Background</string>
    <string name="sound_effect_volume">Sound Effects</string>
    <string name="arrow">Direction Arrow</string>
    <string name="max">MAX</string>
    <string name="claim">claim</string>
    <string name="playmore">Continue Playing</string>
    <string name="rate">Rate this game</string>
    <string name="claimtext">"Thank you for Playing!\nEarned: "</string>
    <string name="gamefinished">Congratulations!\n
    You have beaten the game.</string>
    <string name="welcome">Welcome to SpaceFarm!\n\n
    Spacefarm is a partially automated clicker application where the goal is to buy more and more planets and slowly expand into the galaxy.\n
        \n•Coded by: Caleb Turcotte
        \n•Music created by: Michael Le
        \n•Graphic designs by: Gowri Raveenthiran &amp; Caleb Turcotte</string>
    <string name="welcome2">•Tap planets to earn money</string>
    <string name="welcome3">•Tap the harvesters to buy new planets or upgrade bought planets.\n
    •Once Auto Farm is unlocked a Planet will store extra money over time for its next tap!</string>
    <string name="welcome4">Tap this icon to watch an advertisement and double your tapping income for 1 minute.</string>
    <string name="welcome5">Tap this icon to play a minigame where you catch falling meteors for extra cash.</string>
    <string name="minigameabout">To play the minigame tap meteors as they fall down. But avoid tapping any bombs!\n
        \n
        •Earn up to 5 percent of your current total of money earned.\n
        \n
        •You can play for free every 5 minutes or immediately by watching an advertisement.</string>
    <string name="minigameabout2">Tap the gold meteors to earn points!</string>
    <string name="minigameabout3">If you tap a red meteor you will lose a point!</string>
</resources>
