<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:textColor="@color/font"
    >
    <item
        android:id="@+id/action_websearch"
        android:icon="@drawable/options_front"
        android:orderInCategory="3"
        android:title="@string/info"
        app:showAsAction="ifRoom">
    <menu>
    <item android:id="@+id/reset"
        android:title="@string/startover"/>
    <item android:id="@+id/options"
        android:title="@string/options" />
    <item android:id="@+id/minigame"
        android:title="@string/minigamemenu"/>
    <item android:id="@+id/about"
        android:title="@string/about"/>
    <item android:id="@+id/rate"
        android:title="@string/rate"/>
    </menu>
</item>

</menu>