<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_popupmenu"
    android:orientation="horizontal">

    <Space
        android:layout_height="15dp"
        android:layout_width="20dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Space
            android:layout_height="60dp"
            android:layout_width="200dp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="220dp"
            android:layout_height="120dp"
            android:src="@drawable/gamecomplete"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:contentDescription="@string/claim" />
        <TextView
            android:id="@+id/logintext"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/gamefinished"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/playmore"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/playmore"
            android:textColor="@color/black"
            android:background="@drawable/button"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/rate"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/rate"
            android:textColor="@color/black"
            android:background="@drawable/button"
            android:layout_gravity="center"
            />
        <Space
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_gravity="center"/>

    </LinearLayout>
    <Space
        android:layout_height="15dp"
        android:layout_width="20dp"
        android:layout_gravity="center"/>
</LinearLayout>