<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/ic_popupmenu"
    android:focusable="true"
   >
    <Space
        android:layout_height="15dp"
        android:layout_width="20dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Space
            android:layout_height="15dp"
            android:layout_width="2dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:text="@string/buy"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:focusable="true" />

        <Button
            android:id="@+id/upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_gravity="center"
            android:text="@string/upgrade"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true" />
        <Button
            android:id="@+id/sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_gravity="center"
            android:text="@string/sell"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true"/>
        <Button
            android:id="@+id/auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:layout_gravity="center"
            android:text="@string/autoon"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true" />
    <Space
        android:layout_height="15dp"
        android:layout_width="2dp"
        android:layout_gravity="center"/>
    </LinearLayout>
    <Space
        android:layout_height="15dp"
        android:layout_width="20dp"
        android:layout_gravity="center"/>
</LinearLayout>