<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_material"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:id="@+id/mainscreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4"/>
    <TextView
        android:id="@+id/gametime"
        android:textSize="30sp"
        android:textColor="@color/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/gamepoint"
        android:textSize="30sp"
        android:textColor="@color/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/gametime"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/text"
        android:textColor="@color/font"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/minigame"
        android:textSize="40sp"
        />
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/horizontal_middle"
        app:layout_constraintStart_toEndOf="@id/vertical_middle"
        android:text="@string/start"
        android:background="@drawable/button"
        />
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start"
        app:layout_constraintStart_toEndOf="@id/vertical_middle"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:background="@drawable/button"
        />
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/about"
        app:layout_constraintStart_toEndOf="@id/vertical_middle"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        android:background="@drawable/button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>